k3d/argocd/ingress-argocd.yaml
#kind: Service
#apiVersion: v1
#metadata:
#  name: argocd-service
#  labels:
#    app: argocd-service
#  namespace: default
#spec:
#  type: ExternalName
#  externalName: argocd-server.argocd.svc.cluster.local
#  ports:
#    - port: 80
#---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-ingress
  namespace: argocd
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
    - http:
        paths:
          - path: /argocd
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  number: 80
